--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -2,6 +2,12 @@
   display: flex !important;
   align-items: center !important;
   cursor: pointer;
+  color: black;
+  margin-top: 8px;
+}
+
+.video-title {
+  margin-left: 16px;
 }
 
 .video-item.item img {
