Resolve all errors that appear in the console. Modify the ThubmnailList not to use the same video.

--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -1,6 +1,6 @@
 .video-item {
   display: flex !important;
-  align-items: start !important;
+  align-items: flex-start !important;
   cursor: pointer;
   color: black;
   margin-bottom: 8px !important;
